--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@reach/dialog": "0.15.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.3",
+    "@types/react-dom": "^17.0.9",
     "date-fns": "2.16.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-feather": "2.0.9",
     "react-scripts": "4.0.1",
-    "styled-components": "5.2.1"
+    "styled-components": "5.2.1",
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.27"
   }
 }
